# codigos

./: dependencias.md
Power BI/: README.md  adventuresBase.pbix
Project Telegram/: README.md  config.py  main.py  pyproject.toml  state.py
Project Telegram/graph/: builder.py
Project Telegram/nodes/: analizar_node.py  buscar_node.py  telegram_node.py
Project Telegram/tools/: search_tool.py  telegram_tool.py
Project Telegram/utils/: helpers.py
ProjectCV/: README.md
ProjectCVRag/: README.md  app.py  chat.py  logging_config.py  main.py  pyproject.toml  rag.ipynb  rag.py  requirements.txt  tool.py
ProjectCVRag/chroma_db/: chroma.sqlite3
ProjectFIN/: README.md
ProjectFIN/src/stock_pricerque/config/: agents.yaml  tasks.yaml
ProyectoMKT/: README.md  sales_logic.py  server.py  server_iniciador.py
Proyecto_Template_Etl/: Orq_Etl.py  README.md  logging_config.py  main.py  procesos_etl.py  pyproject.toml  requirements.txt
Proyecto_Template_Etl/config/: base_config.py
Proyecto_Template_Etl/extract/: extract.py
Proyecto_Template_Etl/load/: load.py
Proyecto_Template_Etl/transform/: transform.py
stock_pricerque/: README.md
