[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "emoji>=2.15.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "tavily-python>=0.7.23",
    "telethon>=1.42.0",
]
